--- a/index.html
+++ b/index.html
@@ -5,23 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="container">
         <div class="city"></div> 
-        <div class="weather-container">
-            <div class="weather-icon"></div>
-            <div class="temperature-value"></div>
-            <div class="wind"></div>
-            <div class="humidity"></div>
-            <div class="uv-index"></div>
+        <div class="title">
+            <p>Weather</p>
+        <div>
+            <div class="notification"></div>
+            <div class="weather-container">
+                <div class="weather-icon">
+                    <img src="icons/unknown.png" alt="">
+                </div>
+
+                <div class="temperature-value">
+                    <p>- °<span>C</span></p>
+                </div>
+
+                <div class="temperature-description">
+                    <p>-</p>
+                </div>
+
+                <div class="humidity">
+                    <p>-</p>
+                </div>
+
+                <div class="wind-speed">
+                    <p>-</p>
+                </div>
+
+                <div class="uv-index">
+                    <p>-</p>
+                </div>
+
+                <div class="location">
+                    <p>-</p>
+                </div>
+
+                <div class="current-date">
+                    <p>-</p>
+                </div>
+            </div>
         </div>
     </div>
-
-
-
 
     <script src="script.js"></script>
 </body>
